<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.movie.SearchMovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="3"
        tools:listitem="@layout/item_show" />


    <ImageView
        android:id="@+id/iv_search_movie_info"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/illustration"
        android:src="@drawable/undraw_find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_search_movie_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_search_the_movie"
        app:layout_constraintEnd_toEndOf="@+id/iv_search_movie_info"
        app:layout_constraintStart_toStartOf="@+id/iv_search_movie_info"
        app:layout_constraintTop_toBottomOf="@+id/iv_search_movie_info" />


    <ProgressBar
        android:id="@+id/pb_search_movie"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/BlackAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>